# check: https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
[metadata]
name = pysimpp
version = file: pysimpp/version
author = Loukas Peristeras
author_email = l.peristeras@inn.demokritos.gr
home-page = https://github.com/loudove/pysimpp
description = Simulation post process
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_files = LICENSE*, AUTHORS*
platform = any
keywords = simulation, molecular modeling, post-proces, lammps, gromacs
classifiers =
    Intended Audience :: Molecular modeling community
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3.0
    Operating System :: OS Independent
project_urls = 
    Source code = https://github.com/loudove/pysimpp
    Bug Tracker = https://github.com/loudove/pysimpp/issues
    Changelog = https://github.com/loudove/pysimpp/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
# packages = find:
packages = pysimpp, pysimpp.cluster, pysimpp.utils, pysimpp.primitives, pysimpp.readers
package_dir =
    pysimpp = pysimpp
package_data = 
    pysimpp = version
# setup_requires = pytest-runner
# tests_require = pytest
# test_suite = nose.collector
# tests_require = nose

[options.entry_points]
console_scripts =
    pysimpp = pysimpp:main

[options.packages.find]
where = pysimpp
